# euk-worker

./: .gitignore  LICENSE  README.md  pyproject.toml  worker.js  wrangler.toml
backend/: alembic.ini  passenger_wsgi.py  requirements.txt  run.py  start.bat
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  admin.py  bulk_email_campaign.py  email_log.py  intervention_log.py  shipment.py  status_history.py
backend/app/schemas/: __init__.py  admin.py  email.py  intervention.py  shipment.py  status.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  image_service.py  intervention_service.py  keep_alive.py  notification_service.py  pdf_service.py  qr_service.py  shipment_service.py  tracking_service.py
backend/app/utils/: __init__.py  constants.py  helpers.py  image_hash.py  jwt_utils.py  tracking_generator.py  validators.py
backend/migrations/: env.py
backend/scripts/: backup_db.py  check_delays.py  cleanup_temp.py  create_admin.py  init_db.py  keep_alive_client.py
backend/tests/: test_auth.py  test_emails.py  test_interventions.py  test_shipments.py
docs/: API.md  DEPLOYMENT.md  USER_GUIDE.md
frontend/: netlify.toml
frontend/public_html/: track.html
public_html/: index.html  track.html
public_html/admin/: bulk-email.html  create.html  dashboard.html  history.html  login.html  operations.html
public_html/css/: main.css
public_html/js/: api.js  dashboard.js  interventions.js  operations.js  tracking.js
src/: index.js  index.py
(+32 files in other folders)
